# conda-restricted

./: LICENSE  README.md  environment.yml  pyproject.toml
conda_restricted/: __init__.py  hooks.py  restricted.py
