[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "conda-restricted"
version = "0.1.0"
description = "A conda plugin to restrict the SEARCH_PATH for conda configuration files"
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "conda",
]
license = {file = "LICENSE"}
readme = "README.md"


[project.entry-points.conda]
conda-restricted = "conda_restricted.hooks"

[tool.setuptools]
packages = ["conda_restricted"]
